cloudformation/group/subgroup/k8s/k8s.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "andahme/cloudformation (v0.0.5-SNAPSHOT) 'k8s' deployment",


  "Parameters": {
    "Group": {
      "Type": "String",
      "Description": "Stacker Group Name",
      "AllowedPattern": "[a-z]{2,4}",
      "Default": "am"
    },

    "SubGroup": {
      "Type": "String",
      "Description": "Stacker SubGroup Name",
      "AllowedPattern": "[a-z0-9]{2,4}",
      "Default": "dev"
    }
  },


  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": { "default": "Stacker" },
          "Parameters": [
            "Group",
            "SubGroup"
          ]
        }
      ]
    }
  },


  "Resources": {
    "sgc": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": { "Fn::Sub": "Kubernetes Security Group (Control-Plane)" },
        "SecurityGroupIngress": [
          { "Description": "Allow SubGroup to access the Kubernetes API", "IpProtocol": "tcp", "FromPort": "6443", "ToPort": "6443", "SourceSecurityGroupId": { "Fn::ImportValue": { "Fn::Sub": "${Group}-${SubGroup}-sg" } } }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-${SubGroup}-sg-k8s-control" } }
        ],
        "VpcId": {
          "Fn::ImportValue": { "Fn::Sub": "${Group}-vpc" }
        }
      }
    },

    "sgcci": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Allow Traffic within the Control-Plane",
        "GroupId": { "Ref": "sgc" },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": { "Ref": "sgc" }
      }
    },

    "sgcwi": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Allow Workers to access the Control-Plane",
        "GroupId": { "Ref": "sgc" },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": { "Ref": "sgw" }
      }
    },

    "sgw": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": { "Fn::Sub": "Kubernetes Security Group (Workers)" },
        "SecurityGroupIngress": [
          { "Description": "Allow SubGroup to access HTTP resources", "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Fn::ImportValue": { "Fn::Sub": "${Group}-${SubGroup}-sg" } } },
          { "Description": "Allow SubGroup to access HTTPS resources", "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "SourceSecurityGroupId": { "Fn::ImportValue": { "Fn::Sub": "${Group}-${SubGroup}-sg" } } }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-${SubGroup}-sg-k8s-workers" } }
        ],
        "VpcId": {
          "Fn::ImportValue": { "Fn::Sub": "${Group}-vpc" }
        }
      }
    },

    "sgwci": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Allow the Control-Plane to access Workers",
        "GroupId": { "Ref": "sgw" },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": { "Ref": "sgc" }
      }
    },

    "sgwwi": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Allow Traffic between Workers",
        "GroupId": { "Ref": "sgw" },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": { "Ref": "sgw" }
      }
    }
  },


  "Outputs": {
    "SecurityGroupIdControlPlane": {
      "Value": { "Ref":  "sgc" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-${SubGroup}-sg-k8s-control" }
      }
    },

    "SecurityGroupIdWorkers": {
      "Value": { "Ref":  "sgw" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-${SubGroup}-sg-k8s-workers" }
      }
    }
  }
}
